Fonts fixed, widow chapters fixed kinda

--- a/tex/Makefile
+++ b/tex/Makefile
@@ -1,15 +1,13 @@
-default: bibl2.ps bibl.ps
+default: bibl2.pdf bibl.pdf
 clean:
 	rm *.{aux,log,toc,dvi,ps}
 
 generated.tex: gentex.py
 	./gentex.py generated.tex
-bibl2.ps: bibl2.dvi
-	dvips bibl2.dvi
-bibl2.dvi: bibl2.tex generated.tex
+
+bibl2.pdf: bibl2.tex generated.tex
 	xelatex bibl2.tex < /dev/null
 
-bibl.ps: bibl.dvi
-	dvips bibl.dvi
-bibl.dvi: bibl.tex
-	latex bibl.tex < /dev/null
+bibl.pdf: bibl.tex
+	xelatex bibl.tex < /dev/null
+
